@@ -263,13 +263,13 @@ result indicator period actual		{width:175px; max-width:175px; padding:20px;}
 
 span-result-reference				{display:block; padding:0px 40px 20px 40px;}
 span-result-reference:before		{content:"REFERENCES"; font-size:14px; color:#000; display:block; margin:auto; margin-top:20px; margin-bottom:10px;}
-result span-result-reference reference			{display:block;}
-result span-result-reference reference:before	{content:"Vocabulary " attr(vocabulary) " Code " attr(code); display:inline; font-size:14px; line-height:20px; color:#000;}
+result span-result-reference reference			{display:block; font-size:14px; line-height:20px;}
+result span-result-reference reference:after	{content:" ( " attr(code) " ) "; display:inline; font-size:14px; line-height:20px; color:#000;}
 
 span-reference						{display:block;}
 span-reference:before				{content:"REFERENCES"; font-size:14px; color:#000; display:block; margin:auto; margin-top:30px; margin-bottom:10px;}
-result indicator reference			{display:block;}
-result indicator reference:before	{content:"Vocabulary " attr(vocabulary) " Code " attr(code); display:inline; font-size:14px; line-height:20px; color:#000;}
+result indicator reference			{display:block; font-size:14px; line-height:20px;}
+result indicator reference:after	{content:" ( " attr(code) " ) "; display:inline; font-size:14px; line-height:20px; color:#000;}
 
 span-document						{display:block;}
 span-document:before				{content:"DOCUMENTS"; font-size:14px; color:#000; display:block; margin:auto; margin-top:30px; margin-bottom:10px;}
@@ -484,9 +484,9 @@ iati-activity  > a.a_related-activity ~ a.a_related-activity	{padding-top:10px;}
 related-activity					{display:inline; color:#000;}
 related-activity:hover				{color:#000;}
 related-activity:before				{display:inline-block; padding-right:5px; color:#000; font-size:1.0em; line-height:1.25em;}
-related-activity[type="1"]:before	{content:"Child of ";}
-related-activity[type="2"]:before	{content:"Parent of ";}
-related-activity[type="3"]:before	{content:"Sibling of ";}
+related-activity[type="1"]:before	{content:"Parent ";}
+related-activity[type="2"]:before	{content:"Child ";}
+related-activity[type="3"]:before	{content:"Sibling ";}
 related-activity[type="4"]:before	{content:"Co-funded ";}
 related-activity[type="5"]:before	{content:"Third Party ";}
 
