@@ -7,6 +7,7 @@ Minor css fixes to accomodate savi changes
 Update Print-friendly css
 Update link support for result reference vocab
 Translate vocab numbers to standard descriptions from Registry
+Update related-activity terms
 
 
 Development Portal (2018-02-27 shi)
